# hoot

./: README.md  hoot.cabal
.github/workflows/: haskell.yml
src/Control/Monad/: Logger.hs
src/Hoot/Contentful/: Asset.hs  ContentType.hs  Entry.hs  Id.hs
test/: Driver.hs
test/Control/Monad/: LoggerTest.hs
test/Hoot/Contentful/: IdTest.hs
