cabal-version:         >= 1.10
name:                  hoot
version:               0.1.0.0
license-file:          LICENSE
author:                Tom Harding
maintainer:            i.am.tom.harding@gmail.com
build-type:            Simple

library
  exposed-modules:     Control.Monad.Logger,
                       Hoot.Contentful.Id
  build-depends:       base >= 4.14 && < 4.15,
                       aeson >= 1.5 && < 1.6,
                       hashable >= 1.3 && < 1.4,
                       text >= 1.2 && < 1.3,
                       transformers >= 0.5 && < 0.6,
                       unordered-containers >= 0.2 && < 0.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wextra

executable hoot
  main-is:             Main.hs
  build-depends:       base >= 4.14 && < 4.15, hoot
  hs-source-dirs:      app
  default-language:    Haskell2010

test-suite hoot-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -Wextra
  hs-source-dirs:      test
  main-is:             Driver.hs
  other-modules:       Control.Monad.LoggerTest,
                       Hoot.Contentful.IdTest
  build-depends:       hoot,
                       aeson >= 1.5 && < 1.6,
                       base >= 4.14 && < 4.15,
                       hedgehog >= 1.0 && < 1.1,
                       tasty >= 1.2 && < 1.3,
                       tasty-hedgehog >= 1.0 && < 1.1,
                       tasty-hspec >= 1.1 && < 1.2,
                       tasty-quickcheck >= 0.10 && < 0.11,
                       text >= 1.2 && < 1.3,
                       unordered-containers >= 0.2 && < 0.3
